src/objects/Buzon_CIA__c.object
<CustomObject>
    <description>Almacena las direcciones de correo electrónico configuradas mediante Email2Case para cada Compañía.</description>
    <fields>
        <fullName>BUZ_EMA_Direccion__c</fullName>
        <description>Dirección de correo electrónico de HomeServe configurada como email2Case para la CIA.</description>
        <label>Dirección de Correo Electrónico</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BUZ_LKP_Cuenta__c</fullName>
        <description>Compañía asociada al Buzón.</description>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Buzones</relationshipLabel>
        <relationshipName>Buzones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BUZ_SEL_Tipo_Programa__c</fullName>
        <description>Lista de selección que refleja los tipos de programa que provocan una comunicación vía fax o email a un contacto de una cuenta Compañía</description>
        <label>Tipo de Programa</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipo_Programa</valueSetName>
        </valueSet>
    </fields>
    <label>Buzón</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Identificador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buzones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>